--- a/scss/style.css
+++ b/scss/style.css
@@ -172,17 +172,21 @@ header .close {
 
 .contact button {
   background-color: transparent;
-  border: 2px solid #36CDBC;
+}
+.contact button a {
+  color: #fff;
+  display: block;
   width: 150px;
   height: 45px;
   border-radius: 10px;
+  border: 2px solid #36CDBC;
   font-size: 1rem;
   font-weight: 100;
-  color: #fff;
-  letter-spacing: 2px;
+  letter-spacing: 4px;
   transition: ease-in 0.5s;
+  line-height: 40px;
 }
-.contact button:hover {
+.contact a:hover {
   border: 2px solid #00ADEF;
   box-sizing: border-box;
 }
@@ -514,8 +518,12 @@ main .about .colsConatinerSectionOn .colSection-two .listService ul li strong {
   color: #008374;
 }
 main .about .colsConatinerSectionOn .colSection-two .btnHistory {
+  width: 250px;
+}
+main .about .colsConatinerSectionOn .colSection-two .btnHistory a {
   color: red;
   width: 250px;
+  letter-spacing: 2px;
 }
 main .services {
   padding: 100px 0 150px 0;
@@ -580,16 +588,21 @@ main .services .service--cards .card--item .card--button {
 }
 main .services .service--cards .card--item .card--button button {
   background-color: transparent;
-  padding: 10px 15px;
+}
+main .services .service--cards .card--item .card--button button a {
+  color: #008374;
+  display: block;
+  width: 95px;
+  height: 35px;
   border-radius: 7px;
   border: 1px solid #36CDBC;
-  text-transform: uppercase;
-  font-size: 0.7rem;
-  font-weight: 500;
-  color: #008374;
   transition: 0.5s;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 0.7rem;
+  line-height: 35px;
 }
-main .services .service--cards .card--item .card--button button:hover {
+main .services .service--cards .card--item .card--button a:hover {
   color: #fff;
   background-color: #008374;
 }
@@ -728,7 +741,7 @@ main .testemunhas .slider2 .manual-navigation2 .manual-btn2:hover {
   background-color: #008374;
 }
 main .contact {
-  padding-bottom: 200px;
+  padding-bottom: 100px;
 }
 main .contact .contact-conatiner {
   display: flex;
@@ -778,6 +791,15 @@ main .contact .contact-conatiner .col2-contact div .contact-text p:last-child {
   color: #fff;
   font-weight: 400;
   font-size: 0.8rem;
+}
+main .contact .contact-conatiner .col2-contact div .contact-text p:last-child a {
+  color: #fff;
+  border: none;
+}
+main .contact .contact-conatiner .col2-contact div .contact-text p:last-child a i {
+  font-size: 1.4rem;
+  margin-left: 5px;
+  color: #36CDBC;
 }
 
 @media (max-width: 768px) {
@@ -897,6 +919,9 @@ main .contact .contact-conatiner .col2-contact div .contact-text p:last-child {
     margin-left: 50%;
     transform: translateX(-50%);
   }
+  main .services {
+    padding: 0;
+  }
   main .services .service--cards .card--item {
     width: 100%;
   }
@@ -938,6 +963,81 @@ main .contact .contact-conatiner .col2-contact div .contact-text p:last-child {
     font-size: 0.7rem;
   }
 }
+footer {
+  background-color: #008374;
+}
+footer .footer-container {
+  display: flex;
+  flex-direction: row;
+  padding: 50px 0;
+}
+footer .footer-container div {
+  flex: 1;
+}
+footer .footer-container .foo-col1 .foo-text {
+  padding: 15px 0;
+}
+footer .footer-container .foo-col1 .foo-text p {
+  text-align: justify;
+  font-size: 0.9rem;
+  color: #fff;
+  font-weight: 200;
+  padding: 0 60px 0 0;
+}
+footer .footer-container .foo-col1 .foo-text p strong {
+  color: #36CDBC;
+}
+footer .footer-container .foo-col1 .foo-social {
+  padding: 30px 0;
+}
+footer .footer-container .foo-col1 .foo-social ul {
+  display: flex;
+  gap: 20px;
+}
+footer .footer-container .foo-col1 .foo-social ul li a {
+  display: block;
+  background-color: transparent;
+  border: 2px solid #179385;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 52px;
+  transition: 0.5s;
+}
+footer .footer-container .foo-col1 .foo-social ul li a i {
+  font-size: 1.5rem;
+  color: #1eae9d;
+  transition: 0.5s;
+}
+footer .footer-container .foo-col1 .foo-social ul li a:hover {
+  border: 2px solid #36CDBC;
+}
+footer .footer-container .foo-col1 .foo-social ul li a:hover i {
+  color: #36CDBC;
+}
+footer .footer-container .foo-col2 .foo-linksnavigation ul {
+  display: flex;
+  flex-direction: column;
+  padding: 30px 0;
+  gap: 17px;
+}
+footer .footer-container .foo-col2 .foo-linksnavigation ul li a {
+  color: #1eae9d;
+  font-weight: 500;
+  transition: 0.5s;
+}
+footer .footer-container .foo-col2 .foo-linksnavigation ul li a:hover {
+  color: #36CDBC;
+}
+footer .footer-container .foo-title {
+  color: #fff;
+  font-size: 1.8rem;
+}
+footer .footer-container .foo-title .pqn {
+  font-size: 1rem;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   font-style: normal;
