--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,7 @@
 @import"../assets/color";
 @import"../assets/heade";
 @import"../assets/main";
+@import"../assets/footer";
 
 html{
     // scroll-behavior: smooth ;
