--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -704,7 +704,7 @@ main {
     }
 
     .services {
-      padding: 0;
+      padding: 0 0 150px 0;
       .service--cards {
         .card--item {
           width: 100%;
