--- a/scss/style.css
+++ b/scss/style.css
@@ -986,7 +986,7 @@ footer .footer-container div ul li a:hover {
   color: #36CDBC;
 }
 footer .footer-container .foo-col1 {
-  flex: 1.5;
+  flex: 1;
 }
 footer .footer-container .foo-col1 .foo-text {
   padding: 15px 0;
@@ -1035,7 +1035,7 @@ footer .footer-container .foo-col3 {
   flex: 0.4;
 }
 footer .footer-container .foo-col4 {
-  flex: 0.8;
+  flex: 0.6;
 }
 footer .footer-container .foo-title {
   color: #fff;
@@ -1068,6 +1068,10 @@ footer .direitos p strong {
     flex-direction: column;
     justify-content: center;
   }
+  footer .foo-col1 .foo-social ul {
+    justify-content: center;
+    padding-bottom: 80px;
+  }
 }
 @media (max-width: 576px) {
   footer .footer-container {
@@ -1075,12 +1079,18 @@ footer .direitos p strong {
     justify-content: center;
   }
   footer .footer-container .foo-col1 .foo-social {
-    padding-bottom: 80px;
+    padding-bottom: 40px;
     margin-left: 50%;
     transform: translateX(-50%);
   }
   footer .footer-container .foo-cols {
     flex-direction: column;
+  }
+  footer .footer-container .foo-cols div {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
   }
   footer .footer-container .foo-cols div ul li a {
     font-size: 1rem;
