--- a/assets/_footer.scss
+++ b/assets/_footer.scss
@@ -127,7 +127,61 @@ footer{
         }
     }
     
+    .btnZap{
+        position: fixed;
+        right: 20px;
+        bottom: 20px;
+        height: auto;
+        z-index: 9999;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
+        animation-name: animationZap;
+        animation-duration: 4s;
+        animation-iteration-count: infinite;
+        // width: 300px;
+        a{
+            display: block;
+            font-size: 50px;
+            color: #5CF576;
+            transition:ease 0.5s;
+            font-weight:400;
+        }
+        a:hover{
+            font-size: 60px;
+        }
+    }
+    .btnZap::before{
+        content: "Entre em contato";
+        position: relative;
+        background-color: $primary-light;
+        padding: 10px;
+        border-radius: 15px;
+        font-size: 0.7rem;
+        color: $white;
+        font-weight: normal;
+        letter-spacing: 2px;
+        display: none;
+    }
+    .btnZap:hover::before{
+        display: flex;
+    }
+
     
+    
+}
+
+@keyframes animationZap{
+    0%{
+        bottom: 10px;
+    }
+    50%{
+        bottom: 60px;
+    }
+    100%{
+        bottom: 10px;
+    }
 }
 
 @media (max-width: 768px){
