--- a/assets/_color.scss
+++ b/assets/_color.scss
@@ -1,19 +1,24 @@
 // Primary Colors
 
-$primary-color:#008374;
+$color-dark:#004DA6;
+$primary-color:#ffff;
 $primary-light:#36CDBC;
-$primary-dark:#001A17;
 
 
-// Neotral Colors
+// Neutro Colors
 
-$white:#fff;
+$gray-dark: #7f8c8d;
 $black:#000;
 $gray-light: #ecf0f1;
-$gray-dark: #7f8c8d;
 
 // color logo
 
 $secondary-color:#00ADEF;
+
+// color destaque
+
+$color-destaque: red;
+
+$white:red;
 
 
