--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -11,7 +11,7 @@ main {
       text-transform: uppercase;
       font-weight: 600;
       position: relative;
-      color: $secondary-color;
+      color: $color-dark;
     }
     h3::before {
       content: " ";
@@ -20,7 +20,7 @@ main {
       width: 40px;
       height: 4px;
       border-radius: 10px;
-      background-color: $primary-color;
+      background-color: $color-dark;
     }
   }
 
@@ -31,7 +31,12 @@ main {
       background-color: #fff;
       font-size: 1.4rem;
       text-transform: uppercase;
-      color: $primary-color;
+      color: $color-dark;
+      font-weight: 500;
+
+      strong{
+        font-weight: 500;
+      }
     }
   }
 
@@ -53,11 +58,17 @@ main {
         .titleLocation {
           p {
             font-weight: 400;
-            font-size: 1.3rem;
+            font-size: 1.2rem;
             // text-transform: uppercase;
             strong {
               font-weight: 600;
-              color: $primary-color;
+              color: $black;
+              font-weight: normal;
+            }
+
+            .destaque{
+              color: $color-dark;
+              font-weight: 600;
             }
           }
         }
@@ -177,10 +188,11 @@ main {
         .title-two {
           h3 {
             font-weight: 400;
-            font-size: 1.3rem;
+            font-size: 1.2rem;
 
             strong {
-              color: $primary-color;
+              color: $black;
+              font-weight: normal;
             }
           }
         }
@@ -192,11 +204,12 @@ main {
             li {
               i {
                 padding-right: 10px;
-                color: $secondary-color;
+                color: $color-dark;
                 font-size: 20px;
               }
               strong {
-                color: $primary-color;
+                color: $black;
+                font-weight: normal;
               }
             }
           }
@@ -257,7 +270,7 @@ main {
           align-items: center;
           height: 40px;
           h4 {
-            color: $primary-color;
+            color: $color-dark;
             text-transform: uppercase;
             font-size: 1rem;
             text-align: start;
@@ -283,12 +296,12 @@ main {
             background-color: transparent;
             // padding: 10px 15px;
             a{
-              color: $primary-color;
+              color: $color-dark;
               display: block;
               width: 95px;
               height: 35px;
               border-radius: 7px;
-              border: 1px solid $primary-light;
+              border: 1px solid $color-dark;
               transition: 0.5s;
               text-transform: uppercase;
               font-weight: 500;
@@ -298,8 +311,8 @@ main {
           }
           a:hover {
             // border: 1px solid $secondary-color;
-            color: $white;
-            background-color: $primary-color;
+            color: $primary-color;
+            background-color: $color-dark;
           }
           span {
             i {
@@ -395,7 +408,7 @@ main {
           margin-top: 492px;
           div{
             padding: 5px;
-            border: 2px solid $primary-color;
+            border: 2px solid $color-dark;
             border-radius: 10px;
           }
         }
@@ -404,19 +417,19 @@ main {
         }
 
         #radio-1:checked ~ .auto-navigation .btn-auto1{
-          background-color: $primary-color;
+          background-color: $color-dark;
         }
         #radio-2:checked ~ .auto-navigation .btn-auto2{
-          background-color: $primary-color;
+          background-color: $color-dark;
         }
         #radio-3:checked ~ .auto-navigation .btn-auto3{
-          background-color: $primary-color;
+          background-color: $color-dark;
         }
         #radio-4:checked ~ .auto-navigation .btn-auto4{
-          background-color: $primary-color;
+          background-color: $color-dark;
         }
         #radio-5:checked ~ .auto-navigation .btn-auto5{
-          background-color: $primary-color;
+          background-color: $color-dark;
         }
         
       }
@@ -445,7 +458,7 @@ main {
         justify-content: center;
 
         .manual-btn2{
-          border: 2px solid green;
+          border: 2px solid $color-dark;
           padding: 5px;
           border-radius: 10px;
           transition: 1s;
@@ -478,12 +491,12 @@ main {
       .col2-contact{
         flex: 1;
         padding: 25px;
-        background-color: $primary-color;
+        background-color: #002E64;
         display: flex;
         flex-direction: column;
         gap: 15px;
         div{
-          background-color: #0a665b9e;
+          background-color:#001F42;
           width: 100%;
           height: 80px;
           display: flex;
@@ -510,17 +523,17 @@ main {
            
           }
           .contact-text p:first-child{
-            color: $white;
+            color: $color-dark;
             font-weight: 600;
             font-size: 1.4rem;
           }
           .contact-text p:last-child{
-            color: $white;
+            color: $primary-color;
             font-weight: 400;
             font-size: 0.8rem;
 
             a{
-              color: $white;
+              color: $primary-color;
               border: none;
               i{
                 font-size: 1.4rem;
