--- a/assets/_heade.scss
+++ b/assets/_heade.scss
@@ -17,7 +17,7 @@ header {
 
     .logo {
       img {
-        width: 110px;
+        width: 140px;
         margin-top: 20px;
         display: block;
       }
@@ -165,8 +165,8 @@ header {
     }
   }
   .video {
-    background-color: $primary-color;
-    position: fixed;
+    background-color: transparent;
+    position: absolute;
     top: 0px;
     left: 0px;
     width: 100%;
@@ -178,11 +178,17 @@ header {
     .fa-circle-xmark {
       display: flex;
       position: absolute;
-      top: 30px;
-      right: 7%;
+      top: 60px;
+      right: 19%;
       font-size: 30px;
       cursor: pointer;
       color: $primary-light;
+    }
+
+    video{
+      box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+      background-color: #000;
+      
     }
   }
   .close {
@@ -194,12 +200,12 @@ header {
   button {
     background-color: transparent;
     a{
-      color: $color-dark;
+      color: $secondary-color;
       display: block;      
       width: 150px;
       height: 45px;
       border-radius: 10px;
-      border: 2px solid $color-dark;
+      border: 2px solid $secondary-color;
       font-size: 1rem;
       font-weight: 100;
       letter-spacing: 4px;
@@ -208,9 +214,10 @@ header {
     }
   }
   a:hover {
-    border: 2px solid $secondary-color;
+    border: none;
     box-sizing: border-box;
-    color: $secondary-color;
+    color: $white;
+    background-color: $color-dark;
   }
 }
 
