--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -93,10 +93,12 @@ main {
           border-radius: 15px;
           box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
           position: relative;
+          height: 400px;
           .slides {
             width: 400%;
-            // height: 400px;
+            height: 400px;
             display: flex;
+
             input {
               display: none;
             }
@@ -116,14 +118,14 @@ main {
 
             .slide {
               width: 25%;
-              // position: relative;
               transition: 1s;
+              position: relative;
               img {
                 width: 100%;
                 height: 100%;
+                object-fit:fill;
               }
             }
-
             .navigation-auto div {
               border: 2px solid $secondary-color;
               padding: 5px;
@@ -137,12 +139,12 @@ main {
               margin-top: 360px;
               display: flex;
               justify-content: center;
-              bottom: 26.5px;
+              bottom: 49.5px;
             }
             .navigation-auto div:not(:last-child) {
               margin-right: 40px;
             }
-
+  
             #radio1:checked ~ .navigation-auto .auto-btn1 {
               background-color: $secondary-color;
             }
@@ -155,11 +157,12 @@ main {
             #radio4:checked ~ .navigation-auto .auto-btn4 {
               background-color: $secondary-color;
             }
+            
           }
           .mnual-navigation {
             position: absolute;
             width: 100%;
-            margin-top: -40px;
+            margin-top: -63px;
             display: flex;
             justify-content: center;
             .manual-btn {
@@ -176,9 +179,10 @@ main {
             .manual-btn:hover {
               background-color: #fff;
             }
-          }
+          }    
         }
       }
+      
 
       .colSection-two {
         flex: 1;
@@ -214,6 +218,10 @@ main {
             }
           }
         }
+
+        .history{
+          box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+        }
         .btnHistory {
           width: 250px;
 
@@ -221,6 +229,11 @@ main {
             color: red;
             width: 250px;
             letter-spacing: 2px;
+            box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+          }
+          a:hover{
+            color: $primary-color;
+            border: 2px solid $color-dark;
           }
         }
       }
@@ -255,7 +268,7 @@ main {
         flex-direction: column;
         gap: 15px;
         .card--img {
-          height: 180px;
+          height: 200px;
           display: flex;
           justify-content: center;
           img {
@@ -587,6 +600,7 @@ main {
           .btnHistory {
             color: red;
             width: 250px;
+            
           }
         }
       }
